LeetCode, BOJ 2024-11-16